--- a/catalog/templates/home.html
+++ b/catalog/templates/home.html
@@ -18,8 +18,7 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Skystore</h1>
-    <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
-        продать</p>
+    <p class="lead">Skystore - это онлайн магазин вашей техники</p>
 </div>
 
 <div class="container">
@@ -32,10 +31,10 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title">$ 140</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>- Неограниченная лицензия</li>
+                        <li>- гарантированное закрытие сделок</li>
                         <li>- Поддержка</li>
-                        <li>- Установка на сервер</li>
-                        <li>- Получение обновлений</li>
+                        <li>- удобные варианты расчетов</li>
+                        <li>- Большая база клиентов</li>
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
