--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -11,6 +11,8 @@
                         <li><a href="{% url 'catalog:product_list' %}" class="text-black">Главная</a></li>
                         <li><a href="#" class="text-black">Вход</a></li>
                         <li><a href="#" class="text-black">Регистрация</a></li>
+                         <li><a href="{% url 'blog:list' %}" class="text-black">Блог</a></li>
+                        <li><a href="{% url 'catalog:contact' %}" class="text-black">Контакты</a></li>
                     </ul>
                 </div>
             </div>
@@ -19,7 +21,6 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
             <a href="#" class="navbar-brand d-flex align-items-center">
-
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
                     aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
