--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,18 +1,21 @@
 {%  extends 'catalog/base.html' %}
 {% load my_tags %}
 {% block content %}
-<div class="album py-5 bg-body-tertiary">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for product in object_list %}
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="{{ product.image| mymedia}}">
-                        <div class="card-body">
+    <div class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+    </div>
+    {% for product in object_list %}
+        <div class="col-md-4">
+        <div class="card mb-4 box-shadow">
+            <img src="{{ product.image| mymedia}}">
+                <div class="card-body">
+                    <p class="card-text">
                             <p class="card-text">{{ product.name }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
+                                    <a class="btn btn-primary" href="{% url 'catalog:update_product' product.pk %}" role="button">Редактировать</a>
+                                    <a class="btn btn-primary" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
                             </div>
