--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -189,10 +189,9 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Товары</h1>
                 <p class="lead text-body-secondary">Электроника</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                </p>
+                {% if user.is_authenticated %}
+                <a class="btn btn-primary" href="{% url 'catalog:create_product' %}" role="button">Создать продукт</a>
+                {% endif %}
             </div>
         </div>
     </section>
