--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -9,9 +9,13 @@
                     <h4>Навигация</h4>
                     <ul class="list-unstyled">
                         <li><a href="{% url 'catalog:product_list' %}" class="text-black">Главная</a></li>
-                        <li><a href="#" class="text-black">Вход</a></li>
-                        <li><a href="#" class="text-black">Регистрация</a></li>
-                         <li><a href="{% url 'blog:list' %}" class="text-black">Блог</a></li>
+                        {% if user.is_authenticated %}
+                        <li><a href="{% url 'users:logout' %}" class="text-black">Выход</a></li>
+                        {% else %}
+                        <li><a href="{% url 'users:login' %}" class="text-black">Вход</a></li>
+                        <li><a href="{% url 'users:register' %}" class="text-black">Регистрация</a></li>
+                        {% endif %}
+                        <li><a href="{% url 'blog:list' %}" class="text-black">Блог</a></li>
                         <li><a href="{% url 'catalog:contact' %}" class="text-black">Контакты</a></li>
                     </ul>
                 </div>
