--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -13,10 +13,13 @@
                             <p class="card-text">{{ product.name }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    {% if user.is_authenticated%}
                                     <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
+                                    {% if perms.catalog.can_unpublish_product and perms.catalog.change_description and perms.catalog.change_category or user == product.owner %}
                                     <a class="btn btn-primary" href="{% url 'catalog:update_product' product.pk %}" role="button">Редактировать</a>
+                                    {% endif %}
                                     <a class="btn btn-primary" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
-
+                                    {% endif %}
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
                             </div>
