--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -1,34 +1,43 @@
 <div class="collapse text-bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4>Магазин техники</h4>
-                    <p class="text-body-secondary">розничный магазин, специализирующийся на продаже б/у техники и электроники</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4>Навигация</h4>
-                    <ul class="list-unstyled">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+                <h4>Магазин техники</h4>
+                <p class="text-body-secondary">розничный магазин, специализирующийся на продаже б/у техники и
+                    электроники</p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+                <h4>Навигация</h4>
+                <ul class="list-unstyled">
+                    {% if user.is_authenticated %}
                         <li><a href="{% url 'catalog:product_list' %}" class="text-black">Главная</a></li>
-                        {% if user.is_authenticated %}
-                        <li><a href="{% url 'users:logout' %}" class="text-black">Выход</a></li>
-                        {% else %}
+                        <li>
+                            <form action="{% url 'users:logout' %}" method="post" style="display: inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-link text black"
+                                        style="padding: 0; border: none; background: none;">Выход
+                                </button>
+                            </from>
+                        </li>
+
+                    {% else %}
                         <li><a href="{% url 'users:login' %}" class="text-black">Вход</a></li>
                         <li><a href="{% url 'users:register' %}" class="text-black">Регистрация</a></li>
-                        {% endif %}
-                        <li><a href="{% url 'blog:list' %}" class="text-black">Блог</a></li>
-                        <li><a href="{% url 'catalog:contact' %}" class="text-black">Контакты</a></li>
-                    </ul>
-                </div>
+                    {% endif %}
+                    <li><a href="{% url 'blog:list' %}" class="text-black">Блог</a></li>
+                    <li><a href="{% url 'catalog:contact' %}" class="text-black">Контакты</a></li>
+                </ul>
             </div>
         </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+</div>
+<div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container">
+        <a href="#" class="navbar-brand d-flex align-items-center">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
+</div>
